@@ -33,6 +33,7 @@ SYNOPSIS
       foreach my $object (@objects) {
           say 'have object ' . $object->name;
       }
+      my @objects2 = $container->objects(prefix => 'dir/')->all;
 
       $container->put( 'XXX', 'YYY' );
 
